[tool.poetry]
name = "tmux-fpp"
version = "0.1.0"
description = ""
authors = ["laixintao <laixintaoo@gmail.com>"]
readme = "README.md"
packages = [{include = "tmux_fpp"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
